[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arca-factura-pdf"
version = "0.1.0"
description = "Render Argentine invoice & proforma PDFs (ARCA/AFIP layout) with configurable branding — pure dict → PDF bytes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FactuARCA", email = "hola@factuarca.app" }]
keywords = [
  "arca", "afip", "factura", "invoice", "pdf", "argentina",
  "comprobante", "proforma", "facturacion-electronica", "cae",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Natural Language :: Spanish",
]
dependencies = [
  "fpdf2>=2.7",
  "qrcode>=7.4",
  "Pillow>=10.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "pypdf>=4"]

[project.urls]
Homepage = "https://factuarca.app"
Repository = "https://github.com/puppetmaster886/arca-factura-pdf"
Issues = "https://github.com/puppetmaster886/arca-factura-pdf/issues"

[tool.setuptools.packages.find]
include = ["factura_pdf*"]

[tool.setuptools.package-data]
factura_pdf = ["assets/fonts/*.ttf", "assets/fonts/LICENSE-*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
